@@ -10,6 +10,7 @@ Copyright (C) 2005, 2006, 2007, 2008  Ludovic Courtès <ludo@gnu.org>
 
 ** Improved configure-time diagnostics
 ** `skribilo' now displays a call stack trace upon error when possible
+** New `--custom' compiler option
 
 * New in Skribilo 0.9.1
 
